fixed spacing and tos formatting/scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -152,19 +152,7 @@ background: #DEE2E6;
   height: 62vh;
 }
 
-.article::-webkit-scrollbar {
-  width: 12px;
-}
 
-.article::-webkit-scrollbar-thumb {
-  background-color: var(#868e96) !important;
-  border-radius: 6px;
-}
-
-.article::-webkit-scrollbar-track {
-  background-color: var(#111820);
-  border-radius: 6px;
-}
 
 #message {
   height: 30vh;
